# SnakeGame

./: Dockerfile  Makefile  README.md  architec.md  docker_run.sh
src/: CMakeLists.txt  Makefile  test  tetris.c
src/brick_game/snake/: Makefile  api.h  apple.cc  apple.h  backend.cc  backend.h  game.cc  game.h  main.cc  singleton.cc  singleton.h  snake.cc  snake.h  timer.cc  timer.h
src/brick_game/tetris/: backend.c
src/brick_game/tetris/inc/: backend.h  defines.h  tetris.h
src/dvi/: doc.tex
src/gui/cli/: frontend.c  frontend.h
src/gui/desktop/: controller.cc  controller.h  main.cc  window.cc  window.h
src/tests/snake_tests/: game_test.cc  game_test.h  test_for_apple.cc  test_for_game.cc  test_for_snake.cc
src/tests/tetris_tests/: test_runner.c
tests/: s21_test_main.cc  s21_test_snake.cc
